--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -1,21 +1,31 @@
 
 
 header {
-
-	background-color: #4aaaa5;
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	margin-top: 0;
-	height: 80px;
-	width: 18%;
-	text-align: center;
-	color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+	/*background-color: #4aaaa5;*/
+	/*font-family: 'Georgia', Times, Times New Roman, serif;*/
+	/*margin-top: 0;*/
+	/*height: 80px;*/
+	width: 100%;
+	/*text-align: center;*/
+	/*color: white;*/
 }
 
 
-h1{
+header>h1{
+	color: white;
+	background-color: #4aaaa5;
+	padding: 30px;
+	margin: 0;
+	margin-left: 40px;
+    
+}
+
+.AboutMe {
 	color: #4aaaa5;
 }
-
 
 h2 {
    color: #4aaaa5;
@@ -27,7 +37,7 @@ h2 {
 }
 
 
-#menu ul{
+/*#menu ul{
 	margin: 0;
 	padding: 0;
 }
@@ -39,8 +49,20 @@ h2 {
 	width: 60px;
 	width: 40px;
 	text-align: center;
+*/
+/*}*/
+
+nav >ul {
+	display: flex;
+	flex-direction: row;
 
 }
+
+
+nav >ul>li {
+	list-style-type: none;
+}
+
 
 
 #menu li : hover 
