--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -39,11 +39,10 @@ header>h1{
 .nav > li {
 	display: inline-block;
 	padding-right: 20px;
-
-
+	font-family: 'Arial', 'Helvetica Nueue', 'Helvetica', sans-serif;
 }
 
-.nav > li > a {
+.nav > li > a { 
 	text-decoration: none;
 	color: #777777;
 
@@ -59,6 +58,13 @@ header>h1{
 }
 
 #Contact {
+	color:#4aaaa5;
+	margin: 20px;
+}
+
+
+#Portfolio {
+
 	color:#4aaaa5;
 	margin: 20px;
 }
@@ -102,6 +108,12 @@ textarea{
 	font-family: sans-serif;
 
 }
+
+
+.pictures{
+
+	margin: 100%
+ }
 
 #image {
 	width: 200px;
